--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@ ul {
 header {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 header,
